Remove unnecessary comment-doc overhead

--- a/index.less
+++ b/index.less
@@ -8,142 +8,14 @@ webiste   http://arcticicestudio.com      +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 copyright Copyright (C) 2016              +
-created   2015-03-15 20:17 UTC+0100       +
-modified  2016-08-06 12:09 UTC+0200       +
 +++++++++++++++++++++++++++++++++++++++++++
 
-[Description]
-North-bluish dark theme based on the same named color palette "Northem Dark".
-This is a darker and more blue-tinged variation of the "Northem" color palette.
-This file imports all package files.
+Main LESSCSS stylesheet which imports all modularized project files.
 
 [Index]
-  (1) Imports
-    (1.0) Core
-    (1.1) Package Support
-    (1.2) Languages
-
-[Variations]
-  - "Northem Atom Syntax"       (https://github.com/arcticicestudio/northem-atom-syntax)
-  - "Northem Light Atom Syntax" (https://github.com/arcticicestudio/northem-light-atom-syntax)
-
-Make sure to check out "Northem Dark Atom UI" (https://github.com/arcticicestudio/northem-dark-atom-ui)!
-
-[Other Projects]
-  - "Northem Dark IntelliJ IDEA Syntax" (https://github.com/arcticicestudio/northem-dark-intellij-idea-syntax)
-  - "Northem Dark Eclipse Syntax"       (https://github.com/arcticicestudio/northem-dark-eclipse-syntax)
-  - "Northem Dark Java"                 (https://github.com/arcticicestudio/northem-dark-java)
-  - "Northem Dark gedit"                (https://github.com/arcticicestudio/northem-dark-gedit)
-  - "Northem Dark GTK"                  (in drafting)
-  - "Northem Dark Notepad++"            (https://github.com/arcticicestudio/northem-dark-notepadplusplus) (Windows only)
-
-Visit the official website http://arcticicestudio.com/northem (actually under construction) for more information.
-
-[Languages]
-  - C               (https://atom.io/packages/language-c)
-  - C++             (https://atom.io/packages/language-c)
-  - Clojure         (https://atom.io/packages/language-clojure)
-  - CoffeeScript    (https://atom.io/packages/language-coffee-script)
-  - CS (C#)         (https://atom.io/packages/language-csharp)
-  - CSS             (https://atom.io/packages/language-css)
-  - D               (https://atom.io/packages/language-d)
-  - Generic Config  (https://atom.io/packages/language-generic-config)
-  - git             (https://atom.io/packages/language-git)
-  - GLSL            (https://atom.io/packages/language-glsl)
-  - diff            (https://atom.io/packages/git-diff)
-  - HAML            (https://atom.io/packages/language-haml)
-  - Haskell         (https://atom.io/packages/language-haskell)
-  - HTML            (https://atom.io/packages/language-html)
-  - Jade            (https://atom.io/packages/language-jade)
-  - Java            (https://atom.io/packages/language-java)
-  - Java Properties (https://atom.io/packages/language-java)
-  - JavaScript      (https://atom.io/packages/language-javascript)
-  - JSON            (https://atom.io/packages/language-json)
-  - LaTeX           (https://atom.io/packages/language-latex)
-  - LESSCSS         (https://atom.io/packages/language-lesss)
-  - Markdown        (https://atom.io/packages/language-gfm)
-  - MJML            (https://atom.io/packages/language-mjml)
-  - Mustache        (https://atom.io/packages/language-mustache)
-  - PHP             (https://atom.io/packages/language-php)
-  - PropertyList    (https://atom.io/packages/language-property-list)
-  - Python          (https://atom.io/packages/language-python)
-  - R               (https://atom.io/packages/language-r)
-  - React JSX       (https://atom.io/packages/react)
-  - Ruby            (https://atom.io/packages/language-ruby)
-  - SASS            (https://atom.io/packages/language-sass)
-  - Shell           (https://atom.io/packages/language-shellscript)
-  - SQL             (https://atom.io/packages/language-sql)
-  - XML             (https://atom.io/packages/language-xml)
-  - YAML            (https://atom.io/packages/language-yaml)
-
-[Package Support]
-  - bracket-matcher@^0.79.0           (https://atom.io/packages/bracket-matcher)
-  - color-picker@^2.1.1               (https://atom.io/packages/color-picker)
-  - highlight-selected@^0.11.1        (https://atom.io/packages/highlight-selected)
-  - markdown-preview@^0.157.0         (https://atom.io/packages/markdown-preview)
-  - minimap-highlight-selected@^4.3.1 (https://atom.io/packages/minimap-highlight-selected)
-  - minimap-git-diff@^4.2.0           (https://atom.io/packages/minimap-git-diff)
-
-[Version]
-0.20.0 (https://github.com/arcticicestudio/northem-dark-atom-syntax/releases/latest)
-
-For older versions check out the GitHub Repository (https://github.com/arcticicestudio/northem-dark-atom-syntax)
-and http://arcticicestudio.com/northem (actually under construction).
-
-[Changelog]
-Check out the "CHANGELOG.md" file or open via "Settings" > "Packages" and filter for "northem-dark-atom-syntax".
-All changelogs are available at the GitHub Repository (https://github.com/arcticicestudio/northem-dark-atom-syntax)
-and http://arcticicestudio.com/northem (actually under construction).
-
-[Recommendations]
-This theme matches the Open Source font "Source Code Pro" (https://typekit.com/fonts/source-code-pro).
-Visit the GitHub Repository at "https://github.com/adobe-fonts/source-code-pro" for more information.
-
-The colored file icons on the preview screenshot are provided by the "file-icons" (https://atom.io/packages/file-icons) package.
-
-[Installation]
-Download and install the recommended font, read section "Recommendations" for more information.
-
-Install via "apm": "apm install northem-dark-atom-syntax"
-Alternatively open "Settings" > "Install", set the filter to "Themes" and search for "northem-dark-atom-syntax".
-
-Activate it by going to the "Settings" > "Themes" section and select "Northem Dark" from the "Syntax Theme" drop-down menu.
-
-[Contribution]
-Please report issues/bugs, suggestions for improvements and feature requests to the issuetracker:
-https://github.com/arcticicestudio/northem-dark-atom-syntax/issues.
-
-[Development]
-Workflow
-  This project follows the "gitflow" (http://nvie.com/posts/a-successful-git-branching-model) branching model.
-
-Specifications
-  This project follows the "Arctic Versioning Specification (ArcVer)" (https://github.com/arcticicestudio/arcver).
-
-[Dependencies]
-Production
-  Engines
-    - atom@1.*.* (https://atom.io)
-
-Development
-  - northem-dark@1.0.0 (https://github.com/arcticicestudio/northem-dark)
-
-  Engines
-    - git@2.8.* (https://git-scm.com)
-
-  Skeletons
-    - glacier-git@0.21.0 (https://github.com/arcticicestudio/glacier-git)
-
-[Author]
-"Northem Dark - Atom Syntax" (https://github.com/arcticicestudio/northem-dark-atom-syntax) is developed and authored by
-Arctic Ice Studio (http://arcticicestudio.com).
-
-[Copyright]
-Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
-
-[License]
-Northem code is licensed under "GPL 3.0" (http://www.gnu.org/licenses/gpl.txt).
-Northem color palette itself is licensed under "CC BY-SA 4.0" (http://creativecommons.org/licenses/by-sa/4.0/).
+  > Core
+  > Package Support
+  > Languages
 
 [References]
 Northem Dark
@@ -158,34 +30,23 @@ LESSCSS
   (http://lesscss.org)
 Modular Scale
   (http://www.modularscale.com)
-Arctic Versioning Specification (ArcVer)
-  (http://specs.arcticicestudio.com/arcver)
-gitflow
-  (http://nvie.com/posts/a-successful-git-branching-model)
-Glacier - Git
-  (https://github.com/arcticicestudio/glacier-git)
 */
-/* +----------------------------------------------------------------------------+
-   + Imports                                                                [1] +
-   +----------------------------------------------------------------------------+ */
-/* +----------------------------------------------------------------------------+
-   + Imports - Core                                                       [1.0] +
-   +----------------------------------------------------------------------------+ */
+/* +------+
+   + Core +
+   +------+ */
 @import (reference) "styles/northem-dark.less";
 @import (reference) "styles/colors.less";
 @import (reference) "styles/sizes.less";
 @import "./styles/editor.less";
-/* +----------------------------------------------------------------------[1.0]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Imports - Package Support                                            [1.1] +
-   +----------------------------------------------------------------------------+ */
+/* +------------------+
+   + Package SUpport  +
+   +------------------+ */
 @import "./styles/packagesupport.less";
-/* +----------------------------------------------------------------------[1.1]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Imports - Languages                                                  [1.2] +
-   +----------------------------------------------------------------------------+ */
+/* +-----------+
+   + Languages +
+   +-----------+ */
 @import "./styles/languages/c.less";
 @import "./styles/languages/clojure.less";
 @import "./styles/languages/coffeescript.less";
@@ -224,5 +85,3 @@ Glacier - Git
 @import "./styles/languages/sql.less";
 @import "./styles/languages/xml.less";
 @import "./styles/languages/yaml.less";
-/* +----------------------------------------------------------------------[1.2]-+ */
-/* +------------------------------------------------------------------------[1]-+ */
