--- a/styles/languages/json.less
+++ b/styles/languages/json.less
@@ -7,43 +7,24 @@ version   0.20.0                          +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
-copyright Copyright (C) 2015-2016         +
-created   2015-03-15 20:17 UTC+0100       +
-modified  2016-01-31 23:17 UTC+0100       +
+copyright Copyright (C) 2016              +
 +++++++++++++++++++++++++++++++++++++++++++
 
-[Description]
-This file defines all language specific syntax highlighting classes for JSON.
+Defines all language specific syntax highlighting classes for "JSON".
 
 [Index]
-  (1) Constant
-  (2) Meta
+  > Constant
+  > Meta
 
-[Dependencies]
-  - language-json@^0.17.2 (https://atom.io/packages/language-json) by "atom" (https://atom.io/users/atom)
-
-[Copyright]
-Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
-
-[License]
-Northem code is licensed under "GPL 3.0" (http://www.gnu.org/licenses/gpl.txt).
-Northem color palette itself is licensed under "CC BY-SA 4.0" (http://creativecommons.org/licenses/by-sa/4.0/).
-
-[References]
-Atom API-Documentation
-  (https://atom.io/docs/api/latest/Atom)
-Atom Flight Manual
-  (https://atom.io/docs)
-LESSCSS
-  (http://lesscss.org)
-Arctic Versioning Specification (ArcVer)
-  (http://specs.arcticicestudio.com/arcver)
+[Atom Package Dependencies]
+  > language-json
+      https://atom.io/packages/language-json
 */
 .source.json {
   color: @color-syntax-other;
-  /* +----------------------------------------------------------------------------+
-     + Constant                                                               [1] +
-     +----------------------------------------------------------------------------+ */
+  /*+----------+
+    + Constant +
+    +----------+*/
   .constant {
     &.language {
       color: @color-syntax-constant;
@@ -53,11 +34,10 @@ Arctic Versioning Specification (ArcVer)
       color: @color-syntax-number;
     }
   }
-  /* +------------------------------------------------------------------------[1]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + Meta                                                                   [2] +
-     +----------------------------------------------------------------------------+ */
+  /*+------+
+    + Meta +
+    +------+*/
   .meta.structure.dictionary.json {
     .string.quoted.json {
       color: @color-syntax-keyword;
@@ -105,5 +85,4 @@ Arctic Versioning Specification (ArcVer)
       }
     }
   }
-  /* +------------------------------------------------------------------------[2]-+ */
 }
