--- a/styles/languages/julia.less
+++ b/styles/languages/julia.less
@@ -7,66 +7,45 @@ version   0.20.0                          +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
-copyright Copyright (C) 2015-2016         +
-created   2015-03-15 20:17 UTC+0100       +
-modified  2016-02-01 20:13 UTC+0100       +
+copyright Copyright (C) 2016              +
 +++++++++++++++++++++++++++++++++++++++++++
 
-[Description]
-This file defines all language specific syntax highlighting classes for Julia.
+Defines all language specific syntax highlighting classes for "Julia".
 
 [Index]
-  (1) Bracket
-  (2) Comment
-  (3) Constant
-  (4) Entity
-  (5) Keyword
-  (6) Punctuation
-  (7) Support
-  (8) Storage
-  (9) String
+  > Bracket
+  > Comment
+  > Constant
+  > Entity
+  > Keyword
+  > Punctuation
+  > Support
+  > Storage
+  > String
 
-[Dependencies]
-  - language-julia@^0.5.0 (https://atom.io/packages/language-julia) by "JuliaLang" (https://atom.io/users/JuliaLang)
-
-[Copyright]
-Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
-
-[License]
-Northem code is licensed under "GPL 3.0" (http://www.gnu.org/licenses/gpl.txt).
-Northem color palette itself is licensed under "CC BY-SA 4.0" (http://creativecommons.org/licenses/by-sa/4.0/).
-
-[References]
-Atom API-Documentation
-  (https://atom.io/docs/api/latest/Atom)
-Atom Flight Manual
-  (https://atom.io/docs)
-LESSCSS
-  (http://lesscss.org)
-Arctic Versioning Specification (ArcVer)
-  (http://specs.arcticicestudio.com/arcver)
+[Atom Package Dependencies]
+  > language-julia
+      https://atom.io/packages/language-julia
 */
 .source.julia {
   color: @color-syntax-other;
-  /* +----------------------------------------------------------------------------+
-     + Bracket                                                                [1] +
-     +----------------------------------------------------------------------------+ */
+  /*+---------+
+    + Bracket +
+    +---------+*/
   .bracket {
     color: @color-syntax-symbol;
   }
-  /* +------------------------------------------------------------------------[1]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + Comment                                                                [2] +
-     +----------------------------------------------------------------------------+ */
+  /*+---------+
+    + Comment +
+    +---------+*/
   .comment {
     color: @color-syntax-comment;
   }
-  /* +------------------------------------------------------------------------[2]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + Constant                                                               [3] +
-     +----------------------------------------------------------------------------+ */
+  /*+----------+
+    + Constant +
+    +----------+*/
   .constant {
     &.numeric {
       color: @color-syntax-number;
@@ -78,19 +57,17 @@ Arctic Versioning Specification (ArcVer)
       color: @color-syntax-constant;
     }
   }
-  /* +------------------------------------------------------------------------[3]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + Enity                                                                  [4] +
-     +----------------------------------------------------------------------------+ */
+  /*+--------+
+    + Entity +
+    +--------+*/
   .entity.name.function {
     color: @color-syntax-function;
   }
-  /* +------------------------------------------------------------------------[4]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + Keyword                                                                [5] +
-     +----------------------------------------------------------------------------+ */
+  /*+---------+
+    + Keyword +
+    +---------+*/
   .keyword {
     &.other,
     &.control {
@@ -104,11 +81,10 @@ Arctic Versioning Specification (ArcVer)
       }
     }
   }
-  /* +------------------------------------------------------------------------[5]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + Punctuation                                                            [6] +
-     +----------------------------------------------------------------------------+ */
+  /*+-------------+
+    + Punctuation +
+    +-------------+*/
   .punctuation.definition {
     &.commment {
       color: @color-syntax-comment;
@@ -120,11 +96,10 @@ Arctic Versioning Specification (ArcVer)
       }
     }
   }
-  /* +------------------------------------------------------------------------[6]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + Support                                                                [7] +
-     +----------------------------------------------------------------------------+ */
+  /*+---------+
+    + Support +
+    +---------+*/
   .support.function {
     color: @color-syntax-function;
 
@@ -132,24 +107,21 @@ Arctic Versioning Specification (ArcVer)
       font-weight: bold;
     }
   }
-  /* +------------------------------------------------------------------------[7]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + Storage                                                                [8] +
-     +----------------------------------------------------------------------------+ */
+  /*+---------+
+    + Storage +
+    +---------+*/
   .storage.type {
     color: @color-syntax-type;
   }
-  /* +------------------------------------------------------------------------[8]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + String                                                                 [9] +
-     +----------------------------------------------------------------------------+ */
+  /*+--------+
+    + String +
+    +--------+*/
   .string.qouted {
     &.single,
     &.double {
       color: @color-syntax-string;
     }
   }
-  /* +------------------------------------------------------------------------[9]-+ */
 }
