--- a/styles/languages/template-language.less
+++ b/styles/languages/template-language.less
@@ -7,96 +7,76 @@ version   0.20.0                          +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
-copyright Copyright (C) 2015-2016         +
-created   2016-01-31 11:12 UTC+0100       +
-modified  2016-02-03 22:05 UTC+0100       +
+copyright Copyright (C) 2016              +
 +++++++++++++++++++++++++++++++++++++++++++
 
-[Description]
-This file defines all language specific syntax highlighting classes for <LANGUAGE>.
+Defines all language specific syntax highlighting classes for "LANGUAGE".
 
 [Index]
-  (1) Comment
-  (2) Constant
-  (3) Entity
-  (4) Keyword
-  (5) Meta
-  (6) Punctuation
-  (7) Support
-  (8) Storage
-  (9) String
-  (10) Variable
+  > Comment
+  > Constant
+  > Entity
+  > Keyword
+  > Meta
+  > Punctuation
+  > Support
+  > Storage
+  > String
+  > Variable
 
-[Dependencies]
-  - language-foobar@1.2.3 (https://atom.io/packages/language-foobar) by "atom" (https://atom.io/users/atom)
-
-[Copyright]
-Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
-
-[License]
-Northem code is licensed under "GPL 3.0" (http://www.gnu.org/licenses/gpl.txt).
-Northem color palette itself is licensed under "CC BY-SA 4.0" (http://creativecommons.org/licenses/by-sa/4.0/).
-
-[References]
-Atom API-Documentation
-  (https://atom.io/docs/api/latest/Atom)
-Atom Flight Manual
-  (https://atom.io/docs)
-LESSCSS
-  (http://lesscss.org)
-Arctic Versioning Specification (ArcVer)
-  (http://specs.arcticicestudio.com/arcver)
+[Atom Package Dependencies]
+  > language-template
+      https://atom.io/packages/language-template
 */
-.source.foobar {
+.source.template {
   color: @color-syntax-other;
-  /* +----------------------------------------------------------------------------+
-     + Comment                                                                [1] +
-     +----------------------------------------------------------------------------+ */
+  /*+---------+
+    + Comment +
+    +---------+*/
+  .comment {}
 
-  /* +------------------------------------------------------------------------[1]-+ */
+  /*+----------+
+    + Constant +
+    +----------+*/
+  .constant {}
 
-  /* +----------------------------------------------------------------------------+
-     + Constant                                                               [2] +
-     +----------------------------------------------------------------------------+ */
-  /* +------------------------------------------------------------------------[2]-+ */
+  /*+--------+
+    + Entity +
+    +--------+*/
+  .entity {}
 
-  /* +----------------------------------------------------------------------------+
-     + Entity                                                                 [3] +
-     +----------------------------------------------------------------------------+ */
-  /* +------------------------------------------------------------------------[3]-+ */
+  /*+---------+
+    + Keyword +
+    +---------+*/
+  .keyword {}
 
-  /* +----------------------------------------------------------------------------+
-     + Keyword                                                                [4] +
-     +----------------------------------------------------------------------------+ */
-  /* +------------------------------------------------------------------------[4]-+ */
+  /*+------+
+    + Meta +
+    +------+*/
+  .meta {}
 
-  /* +----------------------------------------------------------------------------+
-     + Meta                                                                   [5] +
-     +----------------------------------------------------------------------------+ */
-  /* +------------------------------------------------------------------------[5]-+ */
+  /*+-------------+
+    + Punctuation +
+    +-------------+*/
+  .punctuation {}
 
-  /* +----------------------------------------------------------------------------+
-     + Punctuation                                                            [6] +
-     +----------------------------------------------------------------------------+ */
-  /* +------------------------------------------------------------------------[6]-+ */
+  /*+---------+
+    + Support +
+    +---------+*/
+  .support {}
 
-  /* +----------------------------------------------------------------------------+
-     + Support                                                                [7] +
-     +----------------------------------------------------------------------------+ */
-  /* +------------------------------------------------------------------------[7]-+ */
+  /*+---------+
+    + Storage +
+    +---------+*/
+  .storage {}
 
-  /* +----------------------------------------------------------------------------+
-     + Storage                                                                [8] +
-     +----------------------------------------------------------------------------+ */
-  /* +------------------------------------------------------------------------[8]-+ */
+  /*+--------+
+    + String +
+    +--------+*/
+  .string {}
 
-  /* +----------------------------------------------------------------------------+
-     + String                                                                 [9] +
-     +----------------------------------------------------------------------------+ */
-  /* +------------------------------------------------------------------------[9]-+ */
-
-  /* +----------------------------------------------------------------------------+
-     + Variable                                                              [10] +
-     +----------------------------------------------------------------------------+ */
-  /* +-----------------------------------------------------------------------[10]-+ */
+  /*+----------+
+    + Variable +
+    +----------+*/
+  .variable {}
 }
