--- a/styles/colors.less
+++ b/styles/colors.less
@@ -8,64 +8,46 @@ author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
 copyright Copyright (C) 2016              +
-created   2015-03-16 18:21 UTC+0100       +
-modified  2016-08-06 12:08 UTC+0200       +
 +++++++++++++++++++++++++++++++++++++++++++
 
-[Description]
-This file defines all syntax, editor, language & package specific color variables.
+Defines all syntax, editor, language & package specific color variables.
 
 [Index]
-  (1) Syntax
-  (2) Editor
-  (3) Gutter
-  (4) Marker
-  (5) Guide
-  (6) Languages
-    (6.0) C
-    (6.1) C#
-    (6.2) CSS
-    (6.3) diff
-    (6.4) git
-    (6.5) Go
-    (6.5) Haskell
-    (6.6) HTML
-    (6.7) Jade
-    (6.8) Java
-    (6.9) JavaScript
-    (6.10) LaTeX
-    (6.11) LESS
-    (6.12) Markdown
-    (6.13) Mustache
-    (6.14) Nunjucks
-    (6.15) PropertyList
-    (6.16) React JSX
-    (6.17) Ruby
-    (6.18) Scala
-    (6.19) XML
-    (7) Package Support
-      (7.0) markdown-preview
-      (7.1) color-picker
-      (7.2) minimap-git-diff
-
-[Copyright]
-Copyright (C) 2016 Arctic Ice Studio <development@arcticicestudio.com>
-
-[License]
-Northem code is licensed under "GPL 3.0" (http://www.gnu.org/licenses/gpl.txt).
-Northem color palette itself is licensed under "CC BY-SA 4.0" (http://creativecommons.org/licenses/by-sa/4.0/).
-
-[References]
-Atom API-Documentation
-  (https://atom.io/docs/api/latest/Atom)
-Atom Flight Manual
-  (https://atom.io/docs)
-LESSCSS
-  (http://lesscss.org)
+  > Syntax
+  > Editor
+  > Gutter
+  > Marker
+  > Guide
+  > Languages
+      C
+      C#
+      CSS
+      diff
+      git
+      Go
+      Haskell
+      HTML
+      Jade
+      Java
+      JavaScript
+      LaTeX
+      LESS
+      Markdown
+      Mustache
+      Nunjucks
+      PropertyList
+      React JSX
+      Ruby
+      Scala
+      XML
+  > Package Support
+      markdown-preview
+      color-picker
+      minimap-git-diff
 */
-/* +----------------------------------------------------------------------------+
-   + Syntax                                                                 [1] +
-   +----------------------------------------------------------------------------+ */
+/*+--------+
+  + Syntax +
+  +--------+*/
 @color-syntax-attribute: @aqua;
 @color-syntax-character: @white;
 @color-syntax-class:     @aqua;
@@ -90,20 +72,18 @@ LESSCSS
 @color-syntax-type:      @aqua;
 @color-syntax-unit:      @blue;
 @color-syntax-variable:  @dirty-white;
-/* +------------------------------------------------------------------------[1]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Editor                                                                 [2] +
-   +----------------------------------------------------------------------------+ */
+/*+--------+
+  + Editor +
+  +--------+*/
 @color-editor-background:          @darkest-coal;
 @color-editor-background-selected: @dark-blue;
 @color-editor-cursor:              @dirty-white;
 @color-editor-text:                @dirty-white;
-/* +------------------------------------------------------------------------[2]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Gutter                                                                 [3] +
-   +----------------------------------------------------------------------------+ */
+/*+--------+
+  + Gutter +
+  +--------+*/
 @color-gutter-background:          @darkest-coal;
 @color-gutter-background-selected: @coal;
 @color-gutter-text:                @dirty-white;
@@ -111,42 +91,31 @@ LESSCSS
 @color-gutter-icon:                @dirty-white;
 @color-gutter-icon-folded:         @blue;
 @color-gutter-icon-folded-hover:   @light-blue;
-/* +------------------------------------------------------------------------[3]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Marker                                                                 [4] +
-   +----------------------------------------------------------------------------+ */
+/*+--------+
+  + Marker +
+  +--------+*/
 @color-marker-result-border:   @light-blue;
 @color-marker-result-selected: @dirty-white;
-/* +------------------------------------------------------------------------[4]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Guides                                                                 [5] +
-   +----------------------------------------------------------------------------+ */
+/*+--------+
+  + Guides +
+  +--------+*/
 @color-guides-indent-line: @light-coal;
 @color-guides-invisibles:  @light-coal;
 @color-guides-wrap:        @light-coal;
-/* +------------------------------------------------------------------------[5]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Languages                                                              [6] +
-   +----------------------------------------------------------------------------+ */
-/* +----------------------------------------------------------------------------+
-   + Language - C                                                         [6.0] +
-   +----------------------------------------------------------------------------+ */
+/*+-----------+
+  + Languages +
+  +-----------+*/
+/*+--- C ---+*/
 @color-syntax-c-preprocessor: @dark-blue;
-/* +----------------------------------------------------------------------[6.0]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Language - C# (CSharp)                                               [6.1] +
-   +----------------------------------------------------------------------------+ */
+/*+--- C# ---+*/
 @color-syntax-cs-comment-tag:  @light-blue;
 @color-syntax-cs-preprocessor: @dark-blue;
-/* +----------------------------------------------------------------------[6.1]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Language - CSS                                                       [6.2] +
-   +----------------------------------------------------------------------------+ */
+/*+--- CSS ---+*/
 @color-syntax-css-attribute:    @blue;
 @color-syntax-css-at-rule:      @dark-blue;
 @color-syntax-css-class-pseudo: @lime;
@@ -155,157 +124,91 @@ LESSCSS
 @color-syntax-css-media:        @yellow;
 @color-syntax-css-property:     @dirty-white;
 @color-syntax-css-selector:     @dirty-white;
-/* +----------------------------------------------------------------------[6.2]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Language - diff                                                      [6.3] +
-   +----------------------------------------------------------------------------+ */
+/*+--- diff ---+*/
 @color-git-diff-renamed:  @yellow;
 @color-git-diff-added:    @lime;
 @color-git-diff-modified: @blue;
 @color-git-diff-removed:  @red;
-/* +----------------------------------------------------------------------[6.3]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Language - git                                                       [6.4] +
-   +----------------------------------------------------------------------------+ */
+/*+--- git ---+*/
 @color-syntax-git-config-section: @dark-blue;
 @color-syntax-git-rebase-sha:     @blue;
-/* +----------------------------------------------------------------------[6.4]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Language - Go                                                        [6.5] +
-   +----------------------------------------------------------------------------+ */
+/*+--- Go ---+*/
 @color-syntax-go-todo: @yellow;
-/* +----------------------------------------------------------------------[6.5]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Language - Haskell                                                   [6.5] +
-   +----------------------------------------------------------------------------+ */
+/*+--- Haskell ---+*/
 @color-syntax-haskell-preprocessor: @dark-blue;
-/* +----------------------------------------------------------------------[6.5]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Language - HTML                                                      [6.6] +
-   +----------------------------------------------------------------------------+ */
+/*+--- HTML ---+*/
 @color-syntax-html-cdata:           @color-syntax-comment;
 @color-syntax-html-tag:             @blue;
 @color-syntax-html-attribute-value: @light-blue;
 @color-syntax-html-entity:          @orange;
-/* +----------------------------------------------------------------------[6.6]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Language - Jade                                                      [6.7] +
-   +----------------------------------------------------------------------------+ */
+/*+--- Jade ---+*/
 @color-syntax-jade-keyword:          @dark-blue;
 @color-syntax-jade-variable-include: @aqua;
-/* +----------------------------------------------------------------------[6.7]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Language - Java                                                      [6.8] +
-   +----------------------------------------------------------------------------+ */
+/*+--- Java ---+*/
 @color-syntax-java-annotation: @orange;
 @color-syntax-java-package:    @dirty-white;
-/* +----------------------------------------------------------------------[6.8]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Language - JavaScript                                                [6.9] +
-   +----------------------------------------------------------------------------+ */
+/*+--- JavaScript ---+*/
 @color-syntax-javascript-instance: @aqua;
-/* +----------------------------------------------------------------------[6.9]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Languages - LaTeX                                                   [6.10] +
-   +----------------------------------------------------------------------------+ */
+/*+--- LaTeX ---+*/
 @color-syntax-latex-command-definition: @blue;
 @color-syntax-latex-markup-code:        @blue;
 @color-syntax-latex-markup:             @light-blue;
 @color-syntax-latex-preamble:           @dark-blue;
-/* +---------------------------------------------------------------------[6.10]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Language - LESS                                                     [6.11] +
-   +----------------------------------------------------------------------------+ */
+/*+--- LESSCSS ---+*/
 @color-syntax-less-fontface: @dark-blue;
-/* +---------------------------------------------------------------------[6.11]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Language - Markdown                                                 [6.12] +
-   +----------------------------------------------------------------------------+ */
+/*+--- Markdown ---+*/
 @color-syntax-markdown-code: @aqua;
 @color-syntax-markdown-link: @dirty-white;
-/* +---------------------------------------------------------------------[6.12]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Language - Mustache                                                 [6.13] +
-   +----------------------------------------------------------------------------+ */
+/*+--- Mustache ---+*/
 @color-syntax-mustache-tag: @dark-blue;
-/* +---------------------------------------------------------------------[6.13]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Languages - Nunjucks                                                [6.14] +
-   +----------------------------------------------------------------------------+ */
+/*+--- Nunjucks ---+*/
 @color-syntax-nunjucks-tag: @dark-blue;
-/* +---------------------------------------------------------------------[6.14]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Language - PropertyList                                             [6.15] +
-   +----------------------------------------------------------------------------+ */
+/*+--- PropertyList ---+*/
 @color-syntax-propertylist-base64:  @aqua;
 @color-syntax-propertylist-illegal: @red;
-/* +---------------------------------------------------------------------[6.15]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Languages - React JSX                                               [6.16] +
-   +----------------------------------------------------------------------------+ */
+/*+--- React JSX ---+*/
 @color-syntax-react-jsx-embedded-template: @dark-blue;
-/* +---------------------------------------------------------------------[6.16]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Language - Ruby                                                     [6.17] +
-   +----------------------------------------------------------------------------+ */
+/*+--- Ruby ---+*/
 @color-syntax-ruby-instance:       @aqua;
 @color-syntax-ruby-special-method: @dark-blue;
-/* +---------------------------------------------------------------------[6.17]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Languages - Scala                                                   [6.18] +
-   +----------------------------------------------------------------------------+ */
+/*+--- Scala ---+*/
 @color-syntax-scala-scaladoc-tag: @light-blue;
-/* +---------------------------------------------------------------------[6.18]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Language - XML                                                      [6.19] +
-   +----------------------------------------------------------------------------+ */
+/*+--- XML ---+*/
 @color-syntax-xml-attribute: @aqua;
 @color-syntax-xml-cdata:     @color-syntax-comment;
 @color-syntax-xml-tag:       @blue;
-/* +---------------------------------------------------------------------[6.19]-+ */
-/* +------------------------------------------------------------------------[6]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Package Support                                                        [7] +
-   +----------------------------------------------------------------------------+ */
-/* +----------------------------------------------------------------------------+
-   + Package Support - markdown-preview                                    [7.0] +
-   +----------------------------------------------------------------------------+ */
+/*+-----------------+
+  + Package Support +
+  +-----------------+*/
+/*+--- markdown-preview ---+*/
 @color-packagesupport-markdown-preview-blockquote-border: @dirty-white;
 @color-packagesupport-markdown-preview-code:              @light-blue;
 @color-packagesupport-markdown-preview-code-hover:        @light-coal;
-/* +----------------------------------------------------------------------[7.0]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Package Support - color-picker                                       [7.1] +
-   +----------------------------------------------------------------------------+ */
+/*+--- color-picker ---+*/
 @color-packagesupport-color-picker-background:        @darkest-coal;
 @color-packagesupport-color-picker-background-button: @dark-blue;
-/* +----------------------------------------------------------------------[7.1]-+ */
 
-/* +----------------------------------------------------------------------------+
-   + Package Support - minimap-git-diff                                   [7.2] +
-   +----------------------------------------------------------------------------+ */
+/*+--- minimap-git-diff ---+*/
 @color-packagesupport-minimap-git-diff-modified: @yellow;
 @color-packagesupport-minimap-git-diff-added:    @lime;
 @color-packagesupport-minimap-git-diff-removed:  @red;
-/* +----------------------------------------------------------------------[7.2]-+ */
-/* +------------------------------------------------------------------------[7]-+ */
