--- a/styles/languages/make.less
+++ b/styles/languages/make.less
@@ -1,6 +1,6 @@
 /*
 +++++++++++++++++++++++++++++++++++++++++++
-title     Language Make                   +
+title     Language "Make"                 +
 project   northem-atom-syntax             +
 file      make.less                       +
 version   0.21.0                          +
@@ -8,53 +8,35 @@ author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
 copyright Copyright (C) 2016              +
-created   2016-08-06 11:51 UTC+0200       +
-modified  2016-08-06 11:52 UTC+0200       +
 +++++++++++++++++++++++++++++++++++++++++++
 
-[Description]
-This file defines all language specific syntax highlighting classes for Make.
+Defines all language specific syntax highlighting classes for "Make".
 
 [Index]
-  (1) Comment
-  (2) Constant
-  (3) Keyword
-  (4) Punctuation
-  (5) Support
-  (6) String
-  (7) Variable
+  > Comment
+  > Constant
+  > Keyword
+  > Punctuation
+  > Support
+  > String
+  > Variable
 
-[Dependencies]
-  - language-make@0.22.2 (https://atom.io/packages/language-make) by "atom" (https://atom.io/users/atom)
-
-[Copyright]
-Copyright (C) 2016 Arctic Ice Studio <development@arcticicestudio.com>
-
-[License]
-Northem code is licensed under "GPL 3.0" (http://www.gnu.org/licenses/gpl.txt).
-Northem color palette itself is licensed under "CC BY-SA 4.0" (http://creativecommons.org/licenses/by-sa/4.0/).
-
-[References]
-Atom API-Documentation
-  (https://atom.io/docs/api/latest/Atom)
-Atom Flight Manual
-  (https://atom.io/docs)
-LESSCSS
-  (http://lesscss.org)
+[Atom Package Dependencies]
+  > language-make
+      https://atom.io/packages/language-make
 */
 .source.makefile {
   color: @color-syntax-other;
-  /* +----------------------------------------------------------------------------+
-     + Comment                                                                [1] +
-     +----------------------------------------------------------------------------+ */
+  /*+---------+
+    + Comment +
+    +---------+*/
   .comment {
     color: @color-syntax-comment;
   }
-  /* +------------------------------------------------------------------------[1]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + Constant                                                               [2] +
-     +----------------------------------------------------------------------------+ */
+  /*+---------+
+    + Constant +
+    +---------+*/
   .constant {
     &.other.placeholder {
       color: @color-syntax-operator;
@@ -63,30 +45,27 @@ LESSCSS
       color: @color-syntax-escape;
     }
   }
-  /* +------------------------------------------------------------------------[2]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + Keyword                                                                [3] +
-     +----------------------------------------------------------------------------+ */
+  /*+---------+
+    + Keyword +
+    +---------+*/
   .keyword.control {
     color: @color-syntax-keyword;
   }
-  /* +------------------------------------------------------------------------[3]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + Punctuation                                                            [4] +
-     +----------------------------------------------------------------------------+ */
+  /*+-------------+
+    + Punctuation +
+    +-------------+*/
   .punctuation {
     &.separator.key-value,
     &.definition.variable {
       color: @color-syntax-operator;
     }
   }
-  /* +------------------------------------------------------------------------[4]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + Support                                                                [5] +
-     +----------------------------------------------------------------------------+ */
+  /*+---------+
+    + Support +
+    +---------+*/
   .support.function {
     color: @color-syntax-function;
 
@@ -94,19 +73,17 @@ LESSCSS
       font-style: italic;
     }
   }
-  /* +------------------------------------------------------------------------[5]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + String                                                                 [6] +
-     +----------------------------------------------------------------------------+ */
+  /*+--------+
+    + String +
+    +--------+*/
   .string {
     color: @color-syntax-string;
   }
-  /* +------------------------------------------------------------------------[6]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + Variable                                                               [7] +
-     +----------------------------------------------------------------------------+ */
+  /*+----------+
+    + Variable +
+    +----------+*/
   .variable {
     &.other {
       color: @color-syntax-variable;
@@ -115,5 +92,4 @@ LESSCSS
       color: @color-syntax-constant;
     }
   }
-  /* +------------------------------------------------------------------------[7]-+ */
 }
