--- a/styles/languages/nunjucks.less
+++ b/styles/languages/nunjucks.less
@@ -8,62 +8,43 @@ author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
 copyright Copyright (C) 2016              +
-created   2016-08-06 11:54 UTC+0200       +
-modified  2016-08-06 11:55 UTC+0200       +
 +++++++++++++++++++++++++++++++++++++++++++
 
-[Description]
-This file defines all language specific syntax highlighting classes for Nunjucks.
+Defines all language specific syntax highlighting classes for "Nunjucks".
 
 [Index]
-  (1) Comment
-  (2) Constant
-  (3) Entity
-  (4) Keyword
-  (5) Punctuation
-  (6) String
-  (7) Variable
+  > Comment
+  > Constant
+  > Entity
+  > Keyword
+  > Punctuation
+  > String
+  > Variable
 
-[Dependencies]
-  - language-nunjucks@4.1.0 (https://atom.io/packages/language-nunjucks) by "alohaas" (https://atom.io/users/alohaas)
-
-[Copyright]
-Copyright (C) 2016 Arctic Ice Studio <development@arcticicestudio.com>
-
-[License]
-Northem code is licensed under "GPL 3.0" (http://www.gnu.org/licenses/gpl.txt).
-Northem color palette itself is licensed under "CC BY-SA 4.0" (http://creativecommons.org/licenses/by-sa/4.0/).
-
-[References]
-Atom API-Documentation
-  (https://atom.io/docs/api/latest/Atom)
-Atom Flight Manual
-  (https://atom.io/docs)
-LESSCSS
-  (http://lesscss.org)
+[Atom Package Dependencies]
+  > language-nunjucks
+      https://atom.io/packages/language-nunjucks
 */
 .source.nunjucks,
 .text.html.nunjucks {
   color: @color-syntax-other;
-  /* +----------------------------------------------------------------------------+
-     + Comment                                                                [1] +
-     +----------------------------------------------------------------------------+ */
+  /*+---------+
+    + Comment +
+    +---------+*/
   .comment {
     color: @color-syntax-comment;
   }
-  /* +------------------------------------------------------------------------[1]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + Constant                                                               [2] +
-     +----------------------------------------------------------------------------+ */
+  /*+----------+
+    + Constant +
+    +----------+*/
   .constant.character.entity {
     color: @color-syntax-html-entity;
   }
-  /* +------------------------------------------------------------------------[2]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + Entity                                                                 [3] +
-     +----------------------------------------------------------------------------+ */
+  /*+--------+
+    + Entity +
+    +--------+*/
   .entity.other.nunjucks.delimiter {
     &.tag {
       color: @color-syntax-nunjucks-tag;
@@ -73,11 +54,10 @@ LESSCSS
       font-weight: bold;
     }
   }
-  /* +------------------------------------------------------------------------[3]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + Keyword                                                                [4] +
-     +----------------------------------------------------------------------------+ */
+  /*+---------+
+    + Keyword +
+    +---------+*/
   .keyword {
     &.control {
       color: @color-syntax-keyword;
@@ -89,11 +69,10 @@ LESSCSS
       }
     }
   }
-  /* +------------------------------------------------------------------------[4]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + Punctuation                                                            [5] +
-     +----------------------------------------------------------------------------+ */
+  /*+-------------+
+    + Punctuation +
+    +-------------+*/
   .punctuation {
     &.other {
       color: @color-syntax-symbol;
@@ -102,21 +81,18 @@ LESSCSS
       color: @color-syntax-keyword;
     }
   }
-  /* +------------------------------------------------------------------------[5]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + String                                                                 [6] +
-     +----------------------------------------------------------------------------+ */
+  /*+--------+
+    + String +
+    +--------+*/
   .string.quoted {
     color: @color-syntax-string;
   }
-  /* +------------------------------------------------------------------------[6]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + Variable                                                               [7] +
-     +----------------------------------------------------------------------------+ */
+  /*+----------+
+    + Variable +
+    +----------+*/
   .variable {
     color: @color-syntax-variable;
   }
-  /* +------------------------------------------------------------------------[7]-+ */
 }
