--- a/styles/languages/xml.less
+++ b/styles/languages/xml.less
@@ -7,55 +7,35 @@ version   0.20.0                          +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
-copyright Copyright (C) 2015-2016         +
-created   2015-03-19 08:14 UTC+0200       +
-modified  2016-02-01 20:22 UTC+0100       +
+copyright Copyright (C) 2016              +
 +++++++++++++++++++++++++++++++++++++++++++
 
-[Description]
-This file defines all language specific syntax highlighting classes for XML.
+Defines all language specific syntax highlighting classes for "XML".
 
 [Index]
-  (1) Comment
-  (2) Entity
-  (3) Punctuation
-  (4) String
-  (5) Text
+  > Comment
+  > Entity
+  > Punctuation
+  > String
+  > Text
 
-[Dependencies]
-  - language-xml@^0.34.2 (https://atom.io/packages/language-xml) by "atom" (https://atom.io/users/atom)
-
-[Copyright]
-Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
-
-[License]
-Northem code is licensed under "GPL 3.0" (http://www.gnu.org/licenses/gpl.txt).
-Northem color palette itself is licensed under "CC BY-SA 4.0" (http://creativecommons.org/licenses/by-sa/4.0/).
-
-[References]
-Atom API-Documentation
-  (https://atom.io/docs/api/latest/Atom)
-Atom Flight Manual
-  (https://atom.io/docs)
-LESSCSS
-  (http://lesscss.org)
-Arctic Versioning Specification (ArcVer)
-  (http://specs.arcticicestudio.com/arcver)
+[Atom Package Dependencies]
+  > language-xml
+      https://atom.io/packages/language-xml
 */
 .text.xml,
 .text.xml.plist {
   color: @color-syntax-other;
-  /* +----------------------------------------------------------------------------+
-     + Comment                                                                [1] +
-     +----------------------------------------------------------------------------+ */
+  /*+---------+
+    + Comment +
+    +---------+*/
   .comment {
     color: @color-syntax-comment;
   }
-  /* +------------------------------------------------------------------------[1]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + Enity                                                                  [2] +
-     +----------------------------------------------------------------------------+ */
+  /*+--------+
+    + Entity +
+    +--------+*/
   .entity {
     &.name.tag {
       color: @color-syntax-doctype;
@@ -72,11 +52,10 @@ Arctic Versioning Specification (ArcVer)
       }
     }
   }
-  /* +------------------------------------------------------------------------[2]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + Punctuation                                                            [3] +
-     +----------------------------------------------------------------------------+ */
+  /*+-------------+
+    + Punctuation +
+    +-------------+*/
   .punctuation.definition {
     &.tag {
       color: @color-syntax-xml-tag;
@@ -91,11 +70,10 @@ Arctic Versioning Specification (ArcVer)
       color: @color-syntax-comment;
     }
   }
-  /* +------------------------------------------------------------------------[3]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + String                                                                 [4] +
-     +----------------------------------------------------------------------------+ */
+  /*+--------+
+    + String +
+    +--------+*/
   .string {
     &.quoted {
       &.double,
@@ -107,13 +85,11 @@ Arctic Versioning Specification (ArcVer)
       color: @color-syntax-xml-cdata;
     }
   }
-  /* +------------------------------------------------------------------------[4]-+ */
 
-  /* +----------------------------------------------------------------------------+
-     + Text                                                                   [5] +
-     +----------------------------------------------------------------------------+ */
+  /*+------+
+    + Text +
+    +------+*/
   .text {
     color: @color-editor-text;
   }
-  /* +------------------------------------------------------------------------[5]-+ */
 }
